--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "gsap": "^3.12.5",
